tests/sksl/errors/EmptyStruct.dsl.glsl
### Compilation failed:

error: struct 'S' must contain at least one field
error: expected a type, but found ';'
2 errors
